--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
+<html>
 <head>
+<link rel="stylesheet" type="text/css" href="CSS/Style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>NavBar</title>
-</Head>
+</head>
 
+<header class="row">
+
+<p> This is the header</p>
+</header>
+
+<nav class="row"> This is my nav</nav>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is my first paragraph</p>
-<p>This is my second paragraph</p>
-<p>This is my new website</p>
+<section class="row">
+<aside class="col-4">This is the aside</aside>
+<article class="col-8"> HEY this is an article next to the aside</article>
+<article class="col-8"> HEY this is an article next to the aside</article>
+<article class="col-8"> HEY this is an article next to the aside</article>
+</section>
+<section class="row">
+<article class="col-3">This is article 1</article>
+<article class="col-3">this is article 2</article>
+<article class="col-3">this is article 3</article>
+<article class="col-3">this is article 4</article>
+</section class="row">
+<section class="row">this is section 1</section>
+<section class="row">this is section 2</section>
+<section class="row">this is section 3</section>
 </body>
+<footer class="row">
+<p>This is the footer</p>
+</footer>
+
+</html>
